Adicionando Banco de Dados e CRUD inicial
Bibliotecas ORM e SQLITE, Conexão do Banco de Dados, CRUD inicial da Mesa.